<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20px">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius10_208ffd"
        android:onClick="onClick"
        android:paddingBottom="10px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="10px"
        android:text="@string/setting_back"
        android:textColor="@color/white"
        android:textSize="40px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius10_208ffd"
        android:onClick="onClick"
        android:paddingBottom="10px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="10px"
        android:text="@string/setting_save"
        android:textColor="@color/white"
        android:textSize="40px"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:onClick="onClick"
        android:text="@string/pick_pic"
        app:layout_constraintTop_toBottomOf="@id/tv_back" />

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="600px"
        android:maxWidth="600px"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pick" />

    <TextView
        android:id="@+id/tv_pic_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pic" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:hint="@string/c19_name"
        android:text="@string/c19_name_value_default"
        app:layout_constraintTop_toBottomOf="@id/tv_pic_path" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:hint="@string/c19_id"
        android:text="@string/c19_id_value_default"
        app:layout_constraintTop_toBottomOf="@id/et_name" />


</android.support.constraint.ConstraintLayout>