<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_3446FF"
        android:padding="40px">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_centerVertical="true"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_home"
            android:paddingLeft="40px"
            android:text="@string/title_c19"
            android:textColor="@color/white"
            android:textSize="50px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_radius20_2c3cd9"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="18px">

            <ImageView
                android:layout_width="60px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15px"
                android:src="@drawable/more" />

            <View
                android:layout_width="1px"
                android:layout_height="50px"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:background="@color/color_D3DDFF" />

            <ImageView
                android:layout_width="50px"
                android:layout_height="50px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="18px"
                android:src="@drawable/close" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F8F8F8"
            android:orientation="vertical"
            android:padding="58px">

            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius10_white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="50px">

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/color_272727"
                    android:textSize="40px" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/color_272727"
                    android:textSize="40px" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_head"
                        android:layout_width="600px"
                        android:layout_height="600px"
                        android:layout_marginTop="40px"
                        android:background="@drawable/border_head"
                        android:padding="30px"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60px"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@drawable/right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30px"
                        android:paddingRight="30px"
                        android:text="@string/c19_status"
                        android:textColor="@color/color_14C501"
                        android:textSize="70px" />

                    <ImageView
                        android:layout_width="54px"
                        android:layout_height="54px"
                        android:layout_marginTop="8px"
                        android:src="@drawable/tips" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90px">

                    <TextView
                        android:id="@+id/tv_title_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c19_name"
                        android:textColor="@color/color_8E8E8E"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textColor="@color/color_272727"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title_name"
                        android:layout_marginTop="50px"
                        android:text="@string/c19_id"
                        android:textColor="@color/color_8E8E8E"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_title_id"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textColor="@color/color_272727"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_title_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title_id"
                        android:layout_marginTop="50px"
                        android:text="@string/c19_time_select"
                        android:textColor="@color/color_8E8E8E"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_title_select"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textColor="@color/color_272727"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_title_expired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title_select"
                        android:layout_marginTop="50px"
                        android:text="@string/c19_time_expired"
                        android:textColor="@color/color_8E8E8E"
                        android:textSize="40px" />

                    <TextView
                        android:id="@+id/tv_expired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_title_expired"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textColor="@color/color_CD1316"
                        android:textSize="40px" />


                </RelativeLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200px"
                android:background="@drawable/shape_radius10_208ffd"
                android:padding="50px"
                android:text="@string/c19_back"
                android:textColor="@color/white"
                android:textSize="50px" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50px"
                android:layout_marginTop="120px"
                android:text="@string/c19_company"
                android:textColor="@color/color_B9B9B9" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>